--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!--Navbar-->
             <section id="home"></section>
-            <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top">
                 <div class="container">
                 <!--Toggler button-->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -28,24 +28,27 @@
                 <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                     <ul class=" navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#home">Home</a>
+                            <strong><a class="nav-link active" href="#home"><i class="fas fa-home mr-1"></i>Home</a></strong>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#news">News</a>
+                            <strong><a class="nav-link" href="#news"><i class="far fa-newspaper mr-1"></i>News</a></strong>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#packages">Pricing</a>
+                            <strong><a class="nav-link" href="#packages"><i class="fas fa-tags mr-1"></i>Pricing</a></strong>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="#contact">Contact us</a>
+                            <strong> <a class="nav-link " href="#contact"><i class="fas fa-users mr-1"></i>Contact</a></strong>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                                 Join Us!
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Sign In</a>
-                                <a class="dropdown-item" href="#">Sign Up</a>
+                                <div class="d-lg-block d-sm-flex ">
+                                    <a class="dropdown-item" href="#">Sign In</a>
+                                    <a class="dropdown-item" href="#">Sign Up</a>
+                                </div>
+                                    
                             </div>
                         </li>
                     </ul>
