--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
               </div>
           </div>
       </div>
-
       <!--Traveling notes-->
       <section class="news py-5 px-4 bg-light" id="news">
         <div class="py-3">
@@ -174,7 +173,7 @@
                       <h5 class="card-title font-ram">First Day</h5>
                       <p class="card-text text-white-50">Fusce suscipit, ante a hendrerit ullamcorper, risus nisl cursus purus, sit amet viverra ante nulla vel justo.
                         </p>
-                        <button type="button" class="btn btn-success float-right">Read more</button>
+                        <button type="button" id="readBtn" class="reader btn btn-success float-right">Read more</button>
                     </div>
                   </div>
             </div>            
@@ -186,7 +185,7 @@
                       <h5 class="card-title font-ram">First Day</h5>
                       <p class="card-text text-white-50">Fusce suscipit, ante a hendrerit ullamcorper, risus nisl cursus purus, sit amet viverra ante nulla vel justo.
                         </p>
-                        <button type="button" class="btn btn-success float-right">Read more</button>
+                        <button type="button" class=" btn btn-success float-right">Read more</button>
                     </div>
                   </div>
             </div>
@@ -198,7 +197,7 @@
                       <h5 class="card-title font-ram">First Day</h5>
                       <p class="card-text text-white-50">Fusce suscipit, ante a hendrerit ullamcorper, risus nisl cursus purus, sit amet viverra ante nulla vel justo.
                         </p>
-                        <button type="button" class="btn btn-success float-right">Read more</button>
+                        <button type="button" class=" btn btn-success float-right">Read more</button>
                     </div>
                   </div>
             </div>
@@ -210,13 +209,22 @@
                       <h5 class="card-title font-ram">First Day</h5>
                       <p class="card-text text-white-50">Fusce suscipit, ante a hendrerit ullamcorper, risus nisl cursus purus, sit amet viverra ante nulla vel justo.
                         </p>
-                        <button type="button" class="btn btn-success float-right">Read more</button>
+                        <button type="button" class=" btn btn-success float-right">Read more</button>
                     </div>
                   </div>
             </div>
         </div>
     </section>
-    
+
+<div class="container-reader d-none" id="reader">
+<div class="jumbotron">
+<h4>Title</h4>
+</div>
+<div class="content">
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur, commodi aperiam eveniet eius veniam aliquid reiciendis! Voluptas deserunt neque minima ex, perspiciatis facilis optio obcaecati ratione itaque cumque velit labore beatae sint quaerat autem maxime quod incidunt debitis pariatur quae molestias. Veritatis, nihil eum totam ipsum porro sunt dolores quia distinctio nulla eveniet soluta nobis quis ullam aperiam doloribus voluptas quae beatae ipsa velit animi. Harum rerum ipsum assumenda, corrupti quasi necessitatibus adipisci non earum, nemo error sint ea omnis molestias blanditiis voluptates distinctio temporibus mollitia unde amet fugiat impedit cupiditate sunt inventore perferendis! Voluptate assumenda necessitatibus est, ab quam corrupti. Repellat eum tenetur impedit aliquam eveniet perspiciatis quisquam incidunt, dolore possimus debitis odio esse reprehenderit optio doloribus, quasi recusandae, necessitatibus dolores voluptates sapiente. Temporibus libero sequi necessitatibus ratione amet nesciunt. Molestias, natus quos. Perferendis aspernatur quas officiis, animi hic libero ullam laborum quia suscipit rerum repellat temporibus at iure?</p>
+</div>
+<button id="closeBtn" class="btn btn-outline-danger btn-custom float-right m-3">Close</button>
+</div> 
     <!--packages-->
     <section class="py-5" id="packages">
         <div class="container my-3">
